--- a/page.html
+++ b/page.html
@@ -3,6 +3,10 @@
     <title>КГУ, если бы был хорошим</title>
   </head>
   <body>
+    <body style="background-color:powderblue;">
     <p>БазА</p>
+    <a href="#">Регистрация</a>
+    <a href="#">Авторизация</a>
+    <a href="#">Контакты</a>
   </body>
 </html>
