--- a/page.html
+++ b/page.html
@@ -4,9 +4,11 @@
   </head>
   <body>
     <body style="background-color:powderblue;">
-    <p>БазА</p>
-    <a href="#">Регистрация</a>
-    <a href="#">Авторизация</a>
-    <a href="#">Контакты</a>
+    <p><font size="10" color="black"><strong>Главная страница</strong></font></p>
+    <a href="#"><font size="7", color="green"><strong><em>Регистрация</em></strong></font></a>
+    <p></p>
+    <a href="#"><font size="7", color="green"><em>Авторизация</em></font></a>
+    <p></p>
+    <a href="#"><font size="3", color="dark green">Контакты</font></a>
   </body>
 </html>
