--- a/page.html
+++ b/page.html
@@ -5,9 +5,9 @@
   <body>
     <body style="background-color:powderblue;">
     <p><font size="10" color="black"><strong>Главная страница</strong></font></p>
-    <a href="#"><font size="7", color="green"><strong><em>Регистрация</em></strong></font></a>
+    <a href="reg"><font size="7", color="green"><strong><em>Регистрация</em></strong></font></a>
     <p></p>
-    <a href="#"><font size="7", color="green"><em>Авторизация</em></font></a>
+    <a href="log"><font size="7", color="green"><em>Авторизация</em></font></a>
     <p></p>
     <a href="#"><font size="3", color="dark green">Контакты</font></a>
   </body>
